--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "printWidth": 120
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "graphql": "^16.2.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
