--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
